--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "react-native-paper": "*"
+    "react-native-paper": "^4.0.0"
   },
 
   "devDependencies": {
